--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -13,9 +13,15 @@
          <version>portable-1.8.2</version> <!-- 请根据需要选择合适的版本 -->
       </dependency>
       <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-         <version>4.13.1</version>
+         <groupId>org.junit.jupiter</groupId>
+         <artifactId>junit-jupiter-api</artifactId>
+         <version>5.8.1</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.junit.jupiter</groupId>
+         <artifactId>junit-jupiter-engine</artifactId>
+         <version>5.8.1</version>
          <scope>test</scope>
       </dependency>
    </dependencies>
